--- a/src/style/landing.less
+++ b/src/style/landing.less
@@ -15,28 +15,17 @@
 
 .one {
   grid-area: header;
-  background-image: url('https://s3.us-east-2.amazonaws.com/www.evalinebai.com/media/me.jpg');
+  background-image: url('https://scontent-ort2-2.xx.fbcdn.net/v/t31.0-8/22096060_1662442043818182_1739560635472035698_o.jpg?_nc_cat=0&oh=baa4823301ab575877cc8161907d1b01&oe=5C02AFD0');
   background-size: cover;
   background-position: center center;
 }
 
 .two {
-  background-image: url('https://s3.us-east-2.amazonaws.com/www.evalinebai.com/media/comp.jpg');
-  background-size: cover;
-  background-position:center center;
-}
-
-.three {
-  background-image: url('https://s3.us-east-2.amazonaws.com/www.evalinebai.com/media/chicago.jpg');
-  background-size: cover;
-  background-position:center center;
-}
-
-.four {
   border: solid 10px @sand-green;
   padding-right: 5%;
   padding-top: 60%;
   text-align: right;
+
   
   h2 {
     color: @pine;
