--- a/src/style/landing.less
+++ b/src/style/landing.less
@@ -5,7 +5,7 @@
 .landing {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
   grid-template-areas: 
     "header header header"
     "header header header";
