Move index.html to main directory

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2710,7 +2710,7 @@
 			background-color: #333;
 			color: rgba(255, 255, 255, 0.75);
 			background-attachment: fixed, fixed;
-			background-image: url("https://tinyurl.com/ybtmarau"), url("https://tinyurl.com/ybtmarau");
+			background-image: url("https://2486634c787a971a3554-d983ce57e4c84901daded0f67d5a004f.ssl.cf1.rackcdn.com/the-orchard-hotel/media/Fort%20Point%20National%20Historic%20Site%20&%20Golden%20Gate%20Bridge%20at%20Night-5a258509e6195.jpg"), url("https://tinyurl.com/ydb5bowb");
 			background-size: auto, cover;
 		}
 
@@ -2801,7 +2801,7 @@
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay3.svg"), linear-gradient(45deg, #9dc66b 5%, #4fa49a 30%, #4361c2);
+		background-image: linear-gradient(#e66465, #9198e5);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		overflow: hidden;
@@ -2950,7 +2950,7 @@
 			-webkit-transition: opacity 1s ease;
 			-ms-transition: opacity 1s ease;
 			transition: opacity 1s ease;
-			background-image: linear-gradient(45deg, #4fa49a, #4361c2);
+			background-image: linear-gradient(#e66465, #9198e5);
 			content: '';
 			height: 100%;
 			left: 0;
@@ -2987,7 +2987,7 @@
 		background-color: #4686a0;
 		color: rgba(255, 255, 255, 0.75);
 		background-attachment: fixed,							fixed,							fixed;
-		background-image: url("images/overlay2.png"), url("images/overlay4.svg"), linear-gradient(45deg, #4361c2, #4fa49a 50%, #9dc66b 95%);
+		background-image: linear-gradient(#e66465, #9198e5);
 		background-position: top left,						center center,					center center;
 		background-size: auto,							cover,							cover;
 		text-align: center;
