--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2323,7 +2323,8 @@
 
 		.image.fit {
 			display: block;
-			margin: 0 0 2em 0;
+			margin-top: 85px;
+			margin-bottom: 85px;
 			width: 100%;
 		}
 
